explicitly enable vector module Add "--enable-native-access=ALL-UNNAMED" for this reason: On some platforms like Linux and MacOS X, this class will invoke the syscall madvise() to advise how OS kernel should handle paging after opening a file. For this to work, Java code must be able to call native code. If this is not allowed, a warning is logged. To enable native access for Lucene in a modularized application, pass --enable-native-access=org.apache.lucene.core to the Java command line. If Lucene is running in a classpath-based application, use --enable-native-access=ALL-UNNAMED.